--- a/static/stat671/project/project_stat671.Rmd
+++ b/static/stat671/project/project_stat671.Rmd
@@ -40,7 +40,7 @@ panderOptions('keep.line.breaks', TRUE)
     + Support vector machines
 
 
-## Motivation: A 1-dimension Example
+## Motivation: A 1-D Example
 
 ```{r, echo=F,out.width='75%'}
 # Create the data frame.
@@ -155,6 +155,20 @@ SVM is the corresponding large-margin classiﬁer, which solves:
 $$\underset{f\in\mathcal{H}}{\min}\frac1n\sum_{i=1}^n\varphi_{hinge}(y_if(x_i)) + \lambda\|f\|^2_\mathcal{H}$$
 
 
+## Support vectors 
+
+The training points with $\alpha_i\neq0$ are called support vectors. 
+Only support vectors are important for the classiﬁcation of new points:
+
+$$\forall x\in\mathcal{X},\ f (x) =\sum_{i=1}^n\alpha_i K (x_i,x)=\sum_{i\in SV}\alpha_i K (x_i,x) $$
+where SV is the set of support vectors.
+
+##
+
+```{r  out.width = "75%"}
+include_graphics("svm.png") 
+```
+
 
 
 ## Primal form
@@ -177,21 +191,6 @@ $$\underset{\alpha\in\mathbb{R^n}}{\min}\frac1n\sum_{i=1}^n\varphi_{hinge}(y_i[K
 This is a convex optimization problem But the objective function is not smooth (because of the hinge loss)
 
 
-## Support vectors 
-
-Consequence of KKT conditions:
-The training points with $\alpha_i\neq0$ are called support vectors. 
-Only support vectors are important for the classiﬁcation of new points:
-
-$$\forall x\in\mathcal{X},\ f (x) =\sum_{i=1}^n\alpha_i K (x_i,x)=\sum_{i\in SV}\alpha_i K (x_i,x) $$
-where SV is the set of support vectors.
-
-##
-
-```{r  out.width = "75%"}
-include_graphics("svm.png") 
-```
-
 
 <!--
 ## Solving the SVM problem
@@ -211,9 +210,32 @@ Evaluation
 $$\min_{\alpha}  \frac{1}{2} \sum\limits_{i=1}^N\sum\limits_{j=1}^N \alpha_i\alpha_j y_i y_j (\vec{x}_i \cdot \vec{x}_j) - \sum\limits_{i=1}^N \alpha_i$$
 s.t.  $\sum\limits_{i=1}^N\alpha_i y_i=0\quad \alpha_i \geqslant 0, i=1,2, \dots, N$
 
-$$\underset{\alpha\in\mathbb{R^n}}{\max}\left\{2\sum_{i=1}^n\alpha_i y_i -\sum_{i,j=1}^n\alpha_i\alpha_j K(x_i,x_j)\right\}=2\alpha^Ty-\alpha^TK\alpha$$
+$$\underset{\alpha\in\mathbb{R^n}}{\max}2\sum_{i=1}^n\alpha_i y_i -\sum_{i,j=1}^n\alpha_i\alpha_j K(x_i,x_j)=2\alpha^Ty-\alpha^TK\alpha$$
 subject to:
 $0\le y_i\alpha_i\le\frac1{2\lambda n}, \text{for } i = 1,...,n$
+
+## Primal and Dual
+
+$$\alpha^\star\left[1-y_if^\star(x_i)\right]=0$$
+
+$$\implies\begin{cases}\alpha^\star>0&\Rightarrow y_if^\star(x_i)=1\\ \alpha^\star=0&\Leftarrow y_if^\star(x_i)>1\\ \alpha^\star<0&\text{not exist}\\
+\text{not exist}&\Leftarrow y_if^\star(x_i)<1\end{cases}$$
+
+The examples in the ﬁrst category, for which the scaled margin is 1 and the constraints are active are called support vectors. They are the closest to the decision boundary.
+
+
+
+## Slack variables {.smaller}
+
+Let us introduce additional slack variables $\xi_1,...,\xi_n\in\mathbb{R}$. The problem is equivalent to:
+
+$$\underset{\alpha\in\mathbb{R^n},\xi\in\mathbb{R^n}}{\min}\left\{\frac1n\sum_{i=1}^n\xi_i + \lambda\alpha^TK\alpha\right\}$$
+subject to:
+$$\xi_i\ge \varphi_{hinge}(y_i[K\alpha]_i)$$
+The objective function is now smooth, but not the constraints 
+However it is easy to replace the non-smooth constraint by a cunjunction of two smooth constraints, because: 
+
+$$u \ge\varphi_{hinge}(v)\iff \begin{cases}u\ge 1-v \\u\ge 0\end{cases}$$
 
 ## slack variables
 
@@ -228,7 +250,9 @@ The solution is sparse in $\alpha$, leading to fast algorithms for training (use
 
 The classiﬁcation of a new point only involves kernel evaluations with support vectors (fast).
 
-##  slack variables {.smaller}
+
+
+##  Slack variables {.smaller}
 
 Representation
 $\mathcal{H}:y=f(\vec{x})=\text{sign}(\vec{w}\vec{x}+b)$
@@ -248,20 +272,6 @@ subject to:
 $\begin{cases}(y_i[K\alpha]_i +\xi_i -1\ge 0,& \text{for} i = 1,...,n,\\\xi_i\ge 0,& \text{for} i = 1,...,n\end{cases}$
 
 
-
-## slack variables {.smaller}
-
-Let us introduce additional slack variables $\xi_1,...,\xi_n\in\mathbb{R}$. The problem is equivalent to:
-
-$$\underset{\alpha\in\mathbb{R^n},\xi\in\mathbb{R^n}}{\min}\left\{\frac1n\sum_{i=1}^n\xi_i + \lambda\alpha^TK\alpha\right\}$$
-subject to:
-$$\xi_i\ge \varphi_{hinge}(y_i[K\alpha]_i)$$ . 
-The objective function is now smooth, but not the constraints 
-However it is easy to replace the non-smooth constraint by a cunjunction of two smooth constraints, because: 
-
-$$u \ge\varphi_{hinge}(v)\iff \begin{cases}u\ge 1-v \\u\ge 0\end{cases}$$
-
-
 ## Dual form with slack variables {.smaller}
 Representation
 $\mathcal{H}:y=f(\vec{x})=\text{sign}\left(\sum\limits_{i=1}^N{\alpha_iy_i(\vec{x} \cdot \vec{x}_i)}+b\right)$
@@ -279,7 +289,7 @@ $$\begin{align*}
 
 
 
-## An nonseparatable Example
+## Soft margin classifiers and nonseparatable Data
 
 ```{r,echo=F}
 set.seed(1) #set seed for reproducibility 
@@ -526,9 +536,11 @@ Chapelle, O. (2007). Training a support vector machine in the primal. Neural com
 
 ## 
 
+```{r  out.width = "75%"}
+include_graphics("algorithm.png") 
+```
 
 
-![pseudo code](algorithm.png)
 
 #
 
